--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="reveal">
 			<div class="slides">
 
-				<section data-markdown data-background-color="#79B635" data-background-image="images/logo.png" data-background-position="top right 0px" data-background-size="auto">
+				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Grundlagen
 							#### Wintersemester 2017/2018
@@ -32,7 +32,7 @@
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-color="#79B635" data-background-image="images/logo.png" data-background-position="top right 0px" data-background-size="auto">
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Vorstellung - Wer bin ich?
 							- DI (FH) Josef Tschiggerl
@@ -42,7 +42,7 @@
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-color="#79B635" data-background-image="images/logo.png" data-background-position="top right 0px" data-background-size="auto">
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### E-Security 1 @ AIM
 							- 2 SWS -> 2 ECTS
@@ -52,7 +52,7 @@
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-color="#79B635" data-background-image="images/logo.png" data-background-position="top right 0px" data-background-size="auto">
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### E-Security 1 @ AIM
 							- Einführung und Terminologie
@@ -64,7 +64,7 @@
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-color="#79B635" data-background-image="images/logo.png" data-background-position="top right 0px" data-background-size="auto">
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Vorstellungsrunde
 							- Ihre Erwartungen an ESEC?
@@ -72,7 +72,7 @@
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-color="#79B635" data-background-image="images/logo.png" data-background-position="top right 0px" data-background-size="auto">
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Tag Cloud und Buzzwords
 							- hier kommt die Tag Cloud hin
