--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -26,7 +26,7 @@
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
-							### E-Security 1 - Grundlagen
+							### E-Security 1 - Vorstellung
 							#### Wintersemester 2017/2018
 							FH Joanneum
 						</textarea>
@@ -47,8 +47,9 @@
 							### E-Security 1 @ AIM
 							- 2 SWS -> 2 ECTS
 							- Integrierte Lehrveranstaltung
-							 - Vorlesungen und Übungen
+							- Vorlesungen und Übungen
 							- Benotung über Mitarbeit, Präsentationen, Ausarbeitungen
+							- Slides/Übersicht auf https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
 
