--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -35,6 +35,112 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Terminologie
+							- CIA: Confidentiality, Integrity, Availability
+							- AAA: Authentication, Authorization, Accounting
+							- Bedrohungen
+						</textarea>
+				</section>
+
+				<section data-markdown id="cia" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Confidentiality, Integrity, Availability (CIA)
+							![CIA](images/02_terminologie/cia.png)
+						</textarea>
+				</section>
+
+				<section data-markdown id="cia-confidentiality" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### CIA: Confidentiality
+							- Geheimhaltung von internen/vertrauliche Informationen
+							- Übertragung von Daten von A nach B ohne "Datenverlust" an Dritte
+							<aside class="notes">Beispiele?
+								(Beispiel Produktionsunternehmen: Budge und Planung für 2018 wird veröffentlicht;
+								Kreditkarten Informationen, Bank Daten, Personenbezogene Daten,
+								Sony Hack: Verlust von Kunden Informationen)</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="cia-integrity" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### CIA: Integrity
+							- Information wird bei Übertragung von A nach B nicht verändert
+							- Nachverfolgbarkeit von Änderungen an Daten
+							<aside class="notes">Beispiele?
+								(Beispiel Produktionsunternehmen: übermitteln von Bauplänen, Budge Positionen verändert;
+								Preis von Waren werden verändert: statt 100Euro plötzlich 1000Euro,
+								Xerox: kopie verändert werte auf Ausdruck)</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="cia-integrity" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### CIA: Availability
+							- A und B sind in der Lage Nachrichten zu Empfangen
+							- Informationen haben nur Wert wenn sie auch Verfügbar sind
+							<aside class="notes">Beispiel: Denial of Service Attacken: Verlust von Reputation</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="aaa" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Authentication, Authorization, Accounting
+							- Wer hat auf welche Informationen wann und auf welche Art und Weise zugegriffen
+							<aside class="notes"></aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="aaa-authentication" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### AAA: Authentication
+							- Typischerweise zentrale Stelle im Unternehmen die User anhand von Merkmalen "identifziert"
+							- am einfachsten durch Username/Passwort
+							<aside class="notes">Active Directory</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="aaa-authorization" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### AAA: Authorization
+							- Nach Identifikation eines Users: Was darf der User tun?
+							- Enforcen einer Policy bzw. Set von Berechtigungen
+							<aside class="notes">Gruppenzugehörigkeit</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="aaa-accounting" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### AAA: Accounting
+							- Nachverfolgbarkeit von Aktionen die User durchgeführt hat
+							- Auditierung von Zugriffen und Verbindungen
+							<aside class="notes">Billing, wie viele Daten verbraucht, Welche files gelöscht,...</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown id="bedrohungen" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Bedrohungen
+							- Welche Bedrohungen im Bereich E-Security fallen ihnen ein?
+						</textarea>
+				</section>
+
+				<section data-markdown id="bedrohungen" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Bedrohungen - eine Auswahl
+							- Menschliches Versagen
+								- Backups und "Least privilege Concept"
+							- Ransomware
+								- Schulungen, Backups
+							- Terror/Politik
+								- Beispiel: Multinationaler Konzern mit Rechenzentren in "Kriesengebieten"
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Quellenverzeichnis
+							CIA Triade - http://panmore.com/the-cia-triad-confidentiality-integrity-availability
+							E-Security Unterlagen - Prof.(FH) DI Ewald Graif
+							Weiterführende Informationen: https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
 
