--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -127,9 +127,9 @@
 					<textarea data-template>
 							### Bedrohungen - eine Auswahl
 							- Menschliches Versagen
-								- Backups und "Least privilege Concept"
+								- Backup und "Least privilege Concept"
 							- Ransomware
-								- Schulungen, Backups
+								- Mitarbeiter Schulung und Backup
 							- Terror/Politik
 								- Beispiel: Multinationaler Konzern mit Rechenzentren in "Kriesengebieten"
 						</textarea>
@@ -138,9 +138,9 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Quellenverzeichnis
-							CIA Triade - http://panmore.com/the-cia-triad-confidentiality-integrity-availability
-							E-Security Unterlagen - Prof.(FH) DI Ewald Graif
-							Weiterführende Informationen: https://github.com/joseftsch/esec1
+							- CIA Triade - http://panmore.com/the-cia-triad-confidentiality-integrity-availability
+							- E-Security Unterlagen - Prof.(FH) DI Ewald Graif
+							- Weiterführende Informationen: https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
 
