--- a/03_sicherheitsmanagement/index.html
+++ b/03_sicherheitsmanagement/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Intro (2017/2018)</title>
+		<title>ESEC1 - Sicherheitsmanagement (2017/2018)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -26,7 +26,7 @@
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
-							### E-Security 1 - Vorstellung
+							### E-Security 1 - Sicherheitsmanagement
 							#### Wintersemester 2017/2018
 							FH Joanneum
 						</textarea>
@@ -34,48 +34,21 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Vorstellung - Wer bin ich?
-							- DI (FH) Josef Tschiggerl
-							- externer Lehrbeauftragter
-							- Absolvent IMA05 an der FH Joanneum
-							- ~7 Jahre bei Wirecard CEE als Team Lead Operation Engineer
+							### Schützenswerte Informationen/Werte im Unternehmen
+							- Software
+							- Hardware
+							- Know-How
+							- Reputation
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
-					<textarea data-template>
-							### E-Security 1 @ AIM
-							- 2 SWS -> 2 ECTS
-							- Integrierte Lehrveranstaltung mit Vorlesungen und Übungen
-							- Benotung über Mitarbeit, Präsentationen, Ausarbeitungen
-							- Slides/Übersicht auf https://github.com/joseftsch/esec1
-						</textarea>
-				</section>
+
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### E-Security 1 @ AIM
-							- Einführung und Terminologie
-							- Sicherheitsmanagement
-							- Normen und Zertifizierungen (ISO 27k Serie, BSI, VdS 3473, PCI)
-							- Bedrohungsklassifizierung und Risikoanalyse
-							- "Tools of the trade"
-							- Abschlussübung
-						</textarea>
-				</section>
-
-				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
-					<textarea data-template>
-							### Vorstellungsrunde
-							- Ihre Erwartungen an ESEC?
-							- Ihr Zugang zu E-Security im Alltag?
-						</textarea>
-				</section>
-
-				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
-					<textarea data-template>
-							### Tag Cloud und Buzzwords
-							![CIA](images/01_intro/wordcloud.png)
+							### Quellenverzeichnis
+							- E-Security Unterlagen - Prof.(FH) DI Ewald Graif
+							- Weiterführende Informationen: https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
 
