--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -126,12 +126,33 @@
 				<section data-markdown id="bedrohungen" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Bedrohungen - eine Auswahl
-							- Menschliches Versagen
+							- Datenverlust durch menschliches Versagen
 								- Backup und "Least privilege Concept"
-							- Ransomware
+							- Ransomware/Viren
 								- Mitarbeiter Schulung und Backup
 							- Terror/Politik
 								- Beispiel: Multinationaler Konzern mit Rechenzentren in "Kriesengebieten"
+						</textarea>
+				</section>
+
+				<section data-markdown id="bedrohungen2" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Bedrohungen - eine Auswahl
+							- Coding Error
+								- Pair programming, Code Review, Tests
+							- SPOK
+								- Dokumentation, Einschulungen, "Know-How Transfer Session"
+							- Ausfall von NW Komponenten oder VM Server
+								- Redundanzen, Cluster
+								<aside class="notes">SPOK: Single Point of Information (zb. langjähriger MA)</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-color="#79B635">
+					<textarea data-template>
+							### E-Security 1 - Terminologie
+							#### Wintersemester 2017/2018
+							FH Joanneum
 						</textarea>
 				</section>
 
