--- a/03_sicherheitsmanagement/index.html
+++ b/03_sicherheitsmanagement/index.html
@@ -42,7 +42,13 @@
 						</textarea>
 				</section>
 
-
+				<section data-markdown data-background-color="#79B635">
+					<textarea data-template>
+							### E-Security 1 - Sicherheitsmanagement
+							#### Wintersemester 2017/2018
+							FH Joanneum
+						</textarea>
+				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
