--- a/03_sicherheitsmanagement/index.html
+++ b/03_sicherheitsmanagement/index.html
@@ -34,11 +34,206 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Schützenswerte Informationen/Werte im Unternehmen
+							### Schützenswerte Informationen im Unternehmen
 							- Software
 							- Hardware
 							- Know-How
 							- Reputation
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Sicherheitsmanagement ...
+							- ... Unterstützt das Unternehmen in allen Bereichen des Alltages
+							- ... Unterstützt beim Erreichen des "Business Zweck"
+							### Treffen von Entscheidungen ...
+							- ... "Duty of loyalty"
+							- ... "Duty of care"
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Wikipedia sagt ...
+							- "Das Sicherheitsmanagement führt, lenkt und koordiniert eine Organisation in Bezug auf alle Sicherheitsaktivitäten"
+							- "Sicherheitsmanagement ist synonym zu Risikomanagement (RM)"
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Sicherheitsmanagement im Unternehmen
+							- nicht eine Person
+							- Unterschiedliche Abteilungen mit unterschiedlichen Zuständigkeiten
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							- Management / "Board of Directors"
+							  - Gesamtverantwortlichkeit, Management Summary, Security Briefing
+							- General Management
+							  - "Head of", Abteilungsleiter, ...
+							  - CEO, CIO, ...
+							- Chief security officer (CSO)
+							  - Entscheidungsträger für Fragen rund um Unternehmenssicherheit
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							- Risk management officer (RMO)
+								- Erstellung von Risiko-Bewertungen/Einschätzungen
+							- Chief information security officer (CISO)
+								- Policy Erstellung, Schulungen, Incident Management, nicht nur technisches sondern auch Geschäfts-Know-How
+							- Business unit (information) security officer (BSO/BISO)
+							  - Security in der Abteilung (z.B. Code Review)
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							- Cybercrime incident response team (CIRT)
+								- Identifikation, Analyse und Abwehr von "cyber crime"
+							- IT Department
+								- Zuständig für den Betrieb/Alltag
+							- Security department
+							  - Physische Sicherheit des Gebäudes und Personal
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Abteilungen innnerhalb des Unternehmens
+							- Idealerweise Trennung von Aufgaben und Verantwortungen
+							- Welche Abteilung berichtet an welche Abeiltung/Position (weisungsgebunden)
+							- Besetzung oft Abhängig von Unternehmensgröße
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Organisationsstruktur
+							<img src="images/03_sicherheitsmanagement/organisation.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Wer arbeitet wo?
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Policies
+							- Sicherheitsmanagement braucht Regelwerk = Policies
+							- Entscheidungen müssen anhand von Policies getroffen werden
+							- Verschiedene Policies für verschiedene Abteilungen
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Policies
+							- Periodischer Review und Anpassung von Policies notwendig
+							- Reaktion auf Veränderungen innerhalb des Unternehmens als auch externe Gegebenheiten
+							- Commitment/Schulung der Mitarbeiter
+							- Immer abhängig von Unternehmensstruktur
+							- Nachschulung, Wiederholung, Awareness-Training
+							- Immer mit Geltungsbereich und Verantwortlichkeiten
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Generelle Policy
+							- Für alle Mitarbeiter/-innen gültig
+							- Beschreibt meist grundsätzlichen Umgang mit IT-Equipment
+							- Unterschrift am ersten Arbeitstag
+							- Nicht übertreiben (z.B.: Passwort Policy) => höheres Risiko
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Abteilungsspezifische Policies
+							- Admins haben andere Policies als Mitarbeiter im Sales
+							- Immer als Zusatz zur generellen Policy
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Ablaufspezifische Policies
+							- Regelwerk welches meist nur auf wenige Mitarbeiter/-innen zutrifft
+							- Beschreibt Regeln auf dessen Basis Entscheidungen getroffen werden
+							- Beispiel: "Firewall Change Request", "Passwort Komplexität für SSH logins"
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Beispiel: "Firewall Change Request" Policy
+							Was könnte da drinnen stehen?
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Beispiel: "Firewall Change Request" Policy
+							- Beschreibt Ablauf des Genehmigungsprozess
+							- Was darf freigegeben werden, was nicht?
+							- Periodische Kontrolle/Review der rules auf der Firewall (Papier vs. Wirklichkeit)
+							- Wo werden unsichere Protokolle verwendet
+							- "Business Reason"
+							- Datum: Erstellt, Reviewed, Update
+							- Sign-off
+							- Welche Informationen müssen im Request vorhanden sein
+							- Geltungsbereich (Interface, IP, ...)
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Übersicht
+							<img src="images/03_sicherheitsmanagement/policies.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Policy Deployment
+							- neue Policies stufenweise in Kraft treten lassen
+							- "Nachschärfen" wo notwendig
+							- Übergangsphasen einplanen
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Awareness Training
+							- Periodisches Training (1-2x pro Jahr)
+							- Anpassen der Inhalte auf Aktualität und Alltag
+							- Mitarbeiter/-innen bei ihrem spezifischen Know-How abholen
+							- Vortrag oder im Browser
+							- Bestätigung über Teilnahme
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Awareness Training
+							- Feedback Runde - Fragen von den Mitarbeiter/-innen
+							- Viele Beispiele aus der Praxis einbauen
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Awareness Training @ Wirecard
+							- Screenshots
 						</textarea>
 				</section>
 
@@ -54,6 +249,7 @@
 					<textarea data-template>
 							### Quellenverzeichnis
 							- E-Security Unterlagen - Prof.(FH) DI Ewald Graif
+							- Wikipedia: https://de.wikipedia.org/wiki/Sicherheitsmanagement
 							- Weiterführende Informationen: https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
