--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -75,7 +75,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Tag Cloud und Buzzwords
-							![CIA](images/01_intro/wordcloud.png)
+							<img src="images/01_intro/wordcloud.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
