--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -44,14 +44,14 @@
 				<section data-markdown id="cia" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Confidentiality, Integrity, Availability (CIA)
-							![CIA](images/02_terminologie/cia.png)
+							<img src="images/02_terminologie/cia.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
 				<section data-markdown id="cia-confidentiality" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### CIA: Confidentiality
-							- Geheimhaltung von internen/vertrauliche Informationen
+							- Geheimhaltung von internen/vertraulichen Informationen
 							- Übertragung von Daten von A nach B ohne "Datenverlust" an Dritte
 							<aside class="notes">Beispiele?
 								(Beispiel Produktionsunternehmen: Budge und Planung für 2018 wird veröffentlicht;
