--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -38,7 +38,7 @@
 							- DI (FH) Josef Tschiggerl
 							- externer Lehrbeauftragter
 							- Absolvent IMA05 an der FH Joanneum
-							- ~7 Jahre bei Wirecard CEE als Team Lead Operation Engineer
+							- ~8 Jahre bei Wirecard CEE als Team Lead Operation Engineer
 						</textarea>
 				</section>
 
@@ -47,7 +47,7 @@
 							### E-Security 1 @ AIM
 							- 2 SWS -> 2 ECTS
 							- Integrierte Lehrveranstaltung mit Vorlesungen und Übungen
-							- Benotung über Mitarbeit, Präsentationen, Ausarbeitungen
+							- Benotung über Mitarbeit, Präsentationen und Ausarbeitungen
 							- Slides/Übersicht auf https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
