--- a/02_terminologie/index.html
+++ b/02_terminologie/index.html
@@ -41,12 +41,12 @@
 						</textarea>
 				</section>
 
-				<section data-markdown id="cia" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+				<!-- <section data-markdown id="cia" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Confidentiality, Integrity, Availability (CIA)
 							<img src="images/02_terminologie/cia.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
-				</section>
+				</section> -->
 
 				<section data-markdown id="cia-confidentiality" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
@@ -75,8 +75,8 @@
 				<section data-markdown id="cia-integrity" data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### CIA: Availability
-							- A und B sind in der Lage Nachrichten zu Empfangen
-							- Informationen haben nur Wert wenn sie auch Verfügbar sind
+							- A und B sind in der Lage Nachrichten zu empfangen
+							- Informationen haben nur Wert wenn sie auch verfügbar sind
 							<aside class="notes">Beispiel: Denial of Service Attacken: Verlust von Reputation</aside>
 						</textarea>
 				</section>
