--- a/03_sicherheitsmanagement/index.html
+++ b/03_sicherheitsmanagement/index.html
@@ -43,11 +43,25 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Schützenswerte Informationen ("Assets") im Unternehmen
-							- Software
-							- Hardware
-							- Know-How
-							- Reputation
+							### Rechtlichte Vorgaben
+							- Letzverantwortlichkeit immer bei der Unternehmensleitung ("Geschäftsführerhaftung")
+							- Datenschutzgesetz (Ersatz durch EU Verordnung im Mai 2018)
+							- "Data Breach Notification Duty"
+							- Verbandsverantwortlichkeitsgesetz (VBVG)
+							- Arbeitsrecht
+							- ...
+							<aside class="notes">Datenschutzgesetz (&sect;14 DSG 2000: ua. Dokumentation von Sicherheitsmaßnahmen,...).
+								Verbandsverantwortlichkeitsgesetz: Mitarbeiter tut etwas illegals mit IT-Equipment</aside>
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Schützenswerte Informationen ("Assets") im/für Unternehmen
+							- IT Systeme (Software, Hardware, ...)
+							- Infrastruktur (USV-Anlagen, Klimaanlagen, Kommunikationsanlagen, ...)
+							- Personelle Ressourcen (Know-how, Ausbildung, Erfahrung, ...)
+							- Reputation (Aussenwirkung auf Kunden)
 						</textarea>
 				</section>
 
@@ -58,7 +72,7 @@
 							- ... Unterstützt beim Erreichen des "Business Zweck"
 							### Treffen von Entscheidungen ...
 							- ... "Duty of loyalty"
-							- ... "Duty of care"
+							- ... "Duty of care" (Sorgfaltspflicht)
 						</textarea>
 				</section>
 
@@ -66,7 +80,6 @@
 					<textarea data-template>
 							### Wikipedia sagt ...
 							- "Das Sicherheitsmanagement führt, lenkt und koordiniert eine Organisation in Bezug auf alle Sicherheitsaktivitäten"
-							- "Sicherheitsmanagement ist synonym zu Risikomanagement (RM)"
 							- "Er beschreibt einen fortlaufenden Prozess innerhalb einer Unternehmung oder Organisation zur Gewährleistung der IT-Sicherheit"
 						</textarea>
 				</section>
@@ -139,7 +152,7 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Policies
-							- Sicherheitsmanagement braucht Regelwerk = Policies
+							- Sicherheitsmanagement braucht Regelwerk=Policies
 							- Entscheidungen müssen anhand von Policies getroffen werden
 							- Verschiedene Policies für verschiedene Abteilungen
 						</textarea>
@@ -221,13 +234,34 @@
 							### Beispiel: "Firewall Change Request" Policy
 							- Beschreibt Ablauf des Genehmigungsprozess
 							- Was darf freigegeben werden, was nicht?
-							- Periodische Kontrolle/Review der rules auf der Firewall (Papier vs. Wirklichkeit)
+							- Periodische Kontrolle/Review der Firewall Regeln (Papier vs. Wirklichkeit)
 							- Wo werden unsichere Protokolle verwendet
 							- "Business Reason"
 							- Datum: Erstellt, Reviewed, Update
 							- Sign-off
 							- Welche Informationen müssen im Request vorhanden sein
 							- Geltungsbereich (Interface, IP, ...)
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Was noch?
+							- Nicht nur klassische "IT Regeln/Vorgaben"
+							- physikalische Sicherheit nicht vergessen
+							  - Datenvernichtung, Zutrittskontrolle, Klimaanlage, Videoüberwachung
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### physikalische Sicherheit
+							- Datenvernichtung: Wie lange müssen Daten aufbehalten werden? Sicher vernichten?
+							- Zutrittskontrolle: Mitarbeiterausweise, Vereinzelungsanlagen
+							- Klimaanlage: Abschaltung welcher Systeme zuerste?
+							- Videoüberwachung: DSG: wie lange wird gespeichert? Audio?
+							- Empfang: Anmelden von Besuchern
+							- Schlüsselverwaltung: Wer hat Zugang zum Firmensafe?
 						</textarea>
 				</section>
 
@@ -378,6 +412,7 @@
 							- E-Security Unterlagen - Prof.(FH) DI Ewald Graif
 							- Wikipedia: https://de.wikipedia.org/wiki/Sicherheitsmanagement ; https://de.wikipedia.org/wiki/IT-Sicherheitsmanagement
 							- Weiterführende Informationen: https://github.com/joseftsch/esec1
+							- WKO IT Sicherheitshandbuch (http://wko.at/ic//IT_Handbuch_KMU_2017.pdf)
 						</textarea>
 				</section>
 
