--- a/05_pci/index.html
+++ b/05_pci/index.html
@@ -394,6 +394,7 @@
 					<textarea data-template>
 							### Quellenverzeichnis
 							- PCI DSS 3.2: https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2.pdf
+							- Weiterführendes Verzeichnis: 
 						</textarea>
 				</section>
 
