--- a/05_pci/index.html
+++ b/05_pci/index.html
@@ -393,8 +393,13 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Quellenverzeichnis
-							- PCI DSS 3.2: https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2.pdf
-							- Weiterführendes Verzeichnis: 
+							- https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2.pdf
+							- https://www.vantiv.com/vantage-point/safer-payments/history-of-pci-data-security-standards
+							- https://www.slideshare.net/SaumyaVishnoi/introduction-to-pci-dss
+							- http://searchsecurity.techtarget.com/feature/The-history-of-the-PCI-DSS-standard-A-visual-timeline
+							- http://www.tdcanadatrust.com/products-services/banking/student-advice/articles/explain-credit-cards.jsp
+							- https://www.pcisecuritystandards.org/pdfs/pci_fs_data_storage.pdf
+							- Weiterführendes Informationen: https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
 
