--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -144,7 +144,7 @@
 							### ARP Poisoning/Spoofing
 							- Lookup IP->MAC
 							- Spoofing
-							  - gefälschten ARP Responses generiert => ARP Table im Switch überlastet
+							  - generieren von gefälschten ARP Responses überlastet ARP Table im Switch
 							- Poisoning
 							  - Gezielt ARP Cache eines Computers überlasten
 							- Optimal für MITM Attacken (zb. Ettercap)
